# habi-challenge

./: README.md  docker-compose.yml
consultation-service/: Dockerfile  pyproject.toml  setup.py
consultation-service/app/application/: filter_factory.py  filter_service.py  filters.py  property_service.py
consultation-service/app/domain/: filter.py  filter_kind.py  filter_service.py  property.py  property_repository.py  property_service.py  status_kind.py
consultation-service/app/infrastructure/: handler.py  mysql_property_repository.py  property_handler.py  property_serializer.py  routes_handler.py
consultation-service/tests/application/: test_filter_factory.py  test_filter_service.py  test_filters.py  test_property_service.py
consultation-service/tests/domain/: test_property.py
consultation-service/tests/infrastructure/: test_mysql_property_repository.py  test_property_handler.py  test_property_serializer.py
docs/: like_feature.sql
