[tool.poetry]
name = "habi-challengue"
version = "0.1.0"
description = ""
authors = ["Christhian Guevara <christhianjesus@gmail.com>"]
readme = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.1.0"
pytest = "^7.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
